--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: A workflow to build books using Enki
-on: push
+on: [workflow_dispatch]
 jobs:
   build:
     name: Build book
     runs-on: ubuntu-latest
-    container: samuelklutse/enki_epub:latest
+    container: openstax/enki:20220922.225409
     permissions:
       deployments: write
       packages: write
@@ -27,16 +27,21 @@ jobs:
           cd enki
           git checkout sk-epub-fixes 
           TRACE_ON=1 LOCAL_ATTIC_DIR=_attic TERM=xterm /github/enki/dockerfiles/enki-in-container --command all-git-epub --repo-dir ${{ env.WORKDIR }} --style dummy
-          
-          mv /tmp/test.epub /tmp/wiskunde-graad-9.epub
-      - uses: ncipollo/release-action@v1
-        with:
-          artifacts: /tmp/wiskunde-graad-9.epub
-          omitBody: True
-          tag: ${{ env.TAG }}
-      - uses: actions/upload-artifact@v3
-        with:
-          name: ${{ github.event.repository.name }}
-          path: /tmp/wiskunde-graad-9.epub
-          if-no-files-found: error
 
+
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          custom_tag: ${{ env.TAG }}
+          tag_prefix: ""
+          release_branches: ${GITHUB_REF##*/}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: /tmp/_attic/IO_ARTIFACTS/wiskunde-graad-9.epub
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: ${{ steps.tag_version.outputs.new_tag }}
+          omitBody: True
